--- a/reports/Test report_2025-08-04_17.40.38.html
+++ b/reports/Test report_2025-08-04_17.40.38.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Functional Testing</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Aug 4, 2025 01:50:38 PM</span></a>
+<a href="#"><span class="badge badge-primary">Aug 4, 2025 05:40:38 pm</span></a>
 </li>
 </ul>
 </div>
@@ -90,9 +90,9 @@
           tag="master regression"
           device="">
           <div class="test-detail">
-            <p class="name">org.testng.internal.TestResult</p>
+            <p class="name">testCases.TC001_accountRegistration</p>
             <p class="text-sm">
-              <span>1:50:45 PM</span> / <span>00:00:00:008</span>
+              <span>17.40.50</span> / <span>00:00:00:012</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -100,10 +100,10 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">org.testng.internal.TestResult</h5>
-<span class='badge badge-success'>08.04.2025 1:50:45 PM</span>
-<span class='badge badge-danger'>08.04.2025 1:50:45 PM</span>
-<span class='badge badge-default'>00:00:00:008</span>
+<h5 class="test-status text-pass">testCases.TC001_accountRegistration</h5>
+<span class='badge badge-success'>08.04.2025 17.40.50</span>
+<span class='badge badge-danger'>08.04.2025 17.40.50</span>
+<span class='badge badge-default'>00:00:00:012</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -118,7 +118,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:50:45 PM</td>
+        <td>17.40.50</td>
         <td>
           Test case PASSED is accRegistration
         </td>
@@ -133,9 +133,9 @@
           tag="master regression"
           device="">
           <div class="test-detail">
-            <p class="name">org.testng.internal.TestResult</p>
+            <p class="name">testCases.TC003_login</p>
             <p class="text-sm">
-              <span>1:50:49 PM</span> / <span>00:00:00:000</span>
+              <span>17.40.55</span> / <span>00:00:00:001</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -143,10 +143,10 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">org.testng.internal.TestResult</h5>
-<span class='badge badge-success'>08.04.2025 1:50:49 PM</span>
-<span class='badge badge-danger'>08.04.2025 1:50:49 PM</span>
-<span class='badge badge-default'>00:00:00:000</span>
+<h5 class="test-status text-pass">testCases.TC003_login</h5>
+<span class='badge badge-success'>08.04.2025 17.40.55</span>
+<span class='badge badge-danger'>08.04.2025 17.40.55</span>
+<span class='badge badge-default'>00:00:00:001</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -161,7 +161,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:50:49 PM</td>
+        <td>17.40.55</td>
         <td>
           Test case PASSED is login
         </td>
@@ -176,9 +176,9 @@
           tag="master sanity"
           device="">
           <div class="test-detail">
-            <p class="name">org.testng.internal.TestResult</p>
+            <p class="name">testCases.TC004_billPayment</p>
             <p class="text-sm">
-              <span>1:50:55 PM</span> / <span>00:00:00:000</span>
+              <span>17.41.00</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -186,9 +186,9 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">org.testng.internal.TestResult</h5>
-<span class='badge badge-success'>08.04.2025 1:50:55 PM</span>
-<span class='badge badge-danger'>08.04.2025 1:50:55 PM</span>
+<h5 class="test-status text-pass">testCases.TC004_billPayment</h5>
+<span class='badge badge-success'>08.04.2025 17.41.00</span>
+<span class='badge badge-danger'>08.04.2025 17.41.00</span>
 <span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
@@ -204,7 +204,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:50:55 PM</td>
+        <td>17.41.00</td>
         <td>
           Test case PASSED is billPayment
         </td>
@@ -255,23 +255,23 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>13:50:45 PM</td>
+<td>17:40:50 pm</td>
 <td>
-<a href="#" class="linked" test-id='1' id='1'>org.testng.internal.TestResult</a>
+<a href="#" class="linked" test-id='1' id='1'>testCases.TC001_accountRegistration</a>
 </td>
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>13:50:49 PM</td>
+<td>17:40:55 pm</td>
 <td>
-<a href="#" class="linked" test-id='2' id='2'>org.testng.internal.TestResult</a>
+<a href="#" class="linked" test-id='2' id='2'>testCases.TC003_login</a>
 </td>
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>13:50:55 PM</td>
+<td>17:41:00 pm</td>
 <td>
-<a href="#" class="linked" test-id='3' id='3'>org.testng.internal.TestResult</a>
+<a href="#" class="linked" test-id='3' id='3'>testCases.TC004_billPayment</a>
 </td>
 </tr>
 </tbody>
@@ -302,9 +302,9 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>13:50:55 PM</td>
+<td>17:41:00 pm</td>
 <td>
-<a href="#" class="linked" test-id='3' id='3'>org.testng.internal.TestResult</a>
+<a href="#" class="linked" test-id='3' id='3'>testCases.TC004_billPayment</a>
 </td>
 </tr>
 </tbody>
@@ -335,16 +335,16 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>13:50:45 PM</td>
+<td>17:40:50 pm</td>
 <td>
-<a href="#" class="linked" test-id='1' id='1'>org.testng.internal.TestResult</a>
+<a href="#" class="linked" test-id='1' id='1'>testCases.TC001_accountRegistration</a>
 </td>
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>13:50:49 PM</td>
+<td>17:40:55 pm</td>
 <td>
-<a href="#" class="linked" test-id='2' id='2'>org.testng.internal.TestResult</a>
+<a href="#" class="linked" test-id='2' id='2'>testCases.TC003_login</a>
 </td>
 </tr>
 </tbody>
@@ -364,13 +364,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Aug 4, 2025 01:50:38 PM</h3>
+<h3>Aug 4, 2025 05:40:38 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Aug 4, 2025 01:50:55 PM</h3>
+<h3>Aug 4, 2025 05:41:00 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -440,7 +440,7 @@
 </div></div>
 <script>
 var timeline = {
-"org.testng.internal.TestResult":0.008,"org.testng.internal.TestResult":0,"org.testng.internal.TestResult":0
+"testCases.TC001_accountRegistration":0.012,"testCases.TC003_login":0.001,"testCases.TC004_billPayment":0
 };
 </script>
 <div class="row">
@@ -505,7 +505,7 @@ var timeline = {
 </tr>
 <tr>
 <td>groups</td>
-<td>[master]</td>
+<td>[]</td>
 </tr>
 </tbody>
 </table></div>
